# aegis-browser-triage

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
assets/: analyzer.worker.js  analyzer_bg-BJnuv7CD.wasm  analyzer_bg-BM_-yIkQ.wasm  analyzer_bg-BfLeEiNP.wasm  dynamic.worker.js  dynamic_analyzer_bg-B5O0Cyiu.wasm  dynamic_analyzer_bg-BHn7A-S5.wasm  dynamic_analyzer_bg-BKpLUocW.wasm  dynamic_analyzer_bg-BSo_hztM.wasm  dynamic_analyzer_bg-BVpK9F8r.wasm  dynamic_analyzer_bg-Btd9AbFz.wasm  dynamic_analyzer_bg-D7cfk-Ah.wasm  dynamic_analyzer_bg-D9Ju10Oi.wasm  dynamic_analyzer_bg-DAIpoldj.wasm  dynamic_analyzer_bg-DV64UzYd.wasm  dynamic_analyzer_bg-DaHo4WKO.wasm  dynamic_analyzer_bg-DpBUKldo.wasm  dynamic_analyzer_bg-WCH1BUIV.wasm  dynamic_analyzer_bg-YuD9g5eA.wasm  dynamic_analyzer_bg-frUF7ZLQ.wasm  dynamic_analyzer_bg-jvSCOP8_.wasm  dynamic_analyzer_bg-qD8gildl.wasm  index-8MFlOlvl.js  index-B5ffp-gl.js  index-B6ckfQ4T.css  index-BAEjd4YK.js  index-BIyBb_TL.js  index-BK52qG7g.js  index-BTsX3S1_.css  index-BopwdSy2.js  index-BvdcuDkv.js  index-CB6ZAqR1.css  index-CC6-Ql8-.js  index-COKgHB3L.js  index-CVqsJwBc.css  index-CVt7ivUW.js  index-CZQAVVFI.js  index-CdvrIAyx.css  index-ClaBNx_d.js  index-CnXucMbK.css  (+21 more)
crates/analysis-core/: Cargo.toml
crates/analysis-core/src/: code.rs  formats.rs  lib.rs  model.rs
crates/analysis-core/tests/: formats.rs
crates/analysis-dynamic/: Cargo.toml
crates/analysis-dynamic-wasm/: Cargo.toml
crates/analysis-dynamic-wasm/src/: lib.rs
crates/analysis-dynamic/examples/: generate_fixture.rs
crates/analysis-dynamic/src/: api.rs  artifact.rs  cpu.rs  cpu64.rs  engine.rs  engine64.rs  engine_elf64.rs  fixture.rs  generation.rs  lib.rs  loader.rs  loader64.rs  loader_elf64.rs  memory.rs  memory64.rs  model.rs  network.rs  provenance.rs  windows.rs
crates/analysis-wasm/: Cargo.toml
crates/analysis-wasm/src/: lib.rs
crates/analysis-yara/: Cargo.toml
crates/analysis-yara-wasm/: Cargo.toml
crates/analysis-yara-wasm/src/: lib.rs
crates/analysis-yara/src/: engine.rs  lib.rs  model.rs
docs/: security-model.md
fixtures/: README.md  aegis-safe-sample-macos  aegis-safe-sample.rs  nope-safe-dynamic-linux-x64
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/fixtures/: README.md
web/src/: App.tsx  analysisClient.ts  analyzer.worker.ts  dynamic.worker.ts  dynamicClient.ts  reportUtils.test.ts  reportUtils.ts  styles.css  types.ts  yara.worker.ts  yaraClient.ts
web/src/rules/: aegis-starter.yar  nope-starter.yar
web/tests/: app.spec.ts
