[workspace]
members = ["crates/analysis-core", "crates/analysis-wasm"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
goblin = "0.10.7"
hex = "0.4.3"
md-5 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
wasm-bindgen = "0.2.106"
wasmparser = "0.253.0"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
