[workspace]
members = [
    "crates/analysis-core",
    "crates/analysis-dynamic",
    "crates/analysis-dynamic-wasm",
    "crates/analysis-yara",
    "crates/analysis-yara-wasm",
    "crates/analysis-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
goblin = "0.10.7"
hex = "0.4.3"
iced-x86 = { version = "1.21.0", default-features = false, features = ["std", "decoder", "intel", "instr_info"] }
md-5 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
wasm-bindgen = "0.2.106"
wasmparser = "0.253.0"
yara-x = { version = "=1.19.0", default-features = false, features = ["constant-folding", "exact-atoms", "fast-regexp", "pe-module", "elf-module", "macho-module", "dotnet-module", "hash-module", "math-module", "string-module", "time-module"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
