[package]
name = "analysis-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goblin.workspace = true
hex.workspace = true
iced-x86.workspace = true
md-5.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
wasmparser.workspace = true

[dev-dependencies]
serde_json.workspace = true
