[package]
name = "analysis-dynamic-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
analysis-dynamic = { path = "../analysis-dynamic" }
serde_json.workspace = true
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

