[package]
name = "analysis-dynamic"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
fixtures = []

[dependencies]
goblin.workspace = true
hex.workspace = true
iced-x86.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[example]]
name = "generate_fixture"
required-features = ["fixtures"]

